productions/veadk/archives/1.0.0/zh/components/knowledge/tos-vector.mdx
---
title: "使用 TOS 向量库存储"
en_link: "/productions/veadk/archives/1.0.0/en/components/knowledge/tos-vector"
---

`tos_vector` 后端使用火山引擎 TOS（对象存储）的**向量桶**作为向量存储。知识文本在本地经 embedding 模型向量化后，写入 TOS 向量索引，检索时按余弦相似度召回。首次使用时会自动创建向量桶与索引（若不存在）。

## 何时使用

- 已开通火山引擎账号，希望使用 TOS 向量桶托管向量数据；
- 需要持久化的向量存储，同时保留在本地控制 embedding 的能力。

## 依赖

```bash lines
pip install "veadk-python[extensions]"
```

## 使用示例

```python lines
from veadk import Agent
from veadk.knowledgebase import KnowledgeBase

kb = KnowledgeBase(backend="tos_vector", index="company_faq")
kb.add_from_text("公司的标准年假为每年 15 天，入职满一年起享受。")

agent = Agent(
    name="demo",
    instruction="回答用户问题，必要时用 `load_knowledgebase` 工具检索知识库。",
    knowledgebase=kb,
)
```

也可以通过 `backend_config` 显式传入凭证与配置：

```python lines
from veadk.knowledgebase import KnowledgeBase
from veadk.configs.database_configs import TOSVectorConfig

kb = KnowledgeBase(
    backend="tos_vector",
    index="company_faq",
    backend_config={
        "index": "company_faq",
        "volcengine_access_key": "your-ak",
        "volcengine_secret_key": "your-sk",
        "tos_vector_bucket_name": "your-vector-bucket",
        "tos_vector_account_id": "your-account-id",
        "tos_vector_config": TOSVectorConfig(
            endpoint="tosvectors-cn-beijing.volces.com",
            region="cn-beijing",
        ),
    },
)
```

## 参数

### 构造参数

`backend_config` 支持以下配置项：

| 参数 | 类型 | 默认值 | 说明 |
| :--- | :--- | :--- | :--- |
| `index` | `str` | 无默认，由 `KnowledgeBase` 传入 | TOS 向量索引名。 |
| `volcengine_access_key` | `str \| None` | 读取环境变量 `VOLCENGINE_ACCESS_KEY` | 火山引擎访问密钥 AK。 |
| `volcengine_secret_key` | `str \| None` | 读取环境变量 `VOLCENGINE_SECRET_KEY` | 火山引擎访问密钥 SK。 |
| `tos_vector_bucket_name` | `str \| None` | 读取环境变量 `DATABASE_TOS_VECTOR_BUCKET` | TOS 向量桶名。 |
| `tos_vector_account_id` | `str \| None` | 读取环境变量 `DATABASE_TOS_VECTOR_ACCOUNT_ID` | 火山引擎账号 ID。 |
| `tos_vector_config` | `TOSVectorConfig` | 自动从 `DATABASE_TOS_VECTOR_*` 环境变量读取 | TOS 向量客户端配置。 |
| `session_token` | `str` | `""` | STS 临时凭证令牌。 |
| `embedding_config` | `EmbeddingModelConfig` | 自动从 `MODEL_EMBEDDING_*` 环境变量读取 | embedding 模型配置。 |

### TOS 向量客户端配置

`tos_vector_config` 为 `TOSVectorConfig`，环境变量前缀 `DATABASE_TOS_VECTOR_`（仅列出常用项）：

| 配置项 | 环境变量 | 类型 | 默认值 | 说明 |
| :--- | :--- | :--- | :--- | :--- |
| `endpoint` | `DATABASE_TOS_VECTOR_ENDPOINT` | `str` | `tosvectors-cn-beijing.volces.com` | TOS 向量服务接入点。 |
| `region` | `DATABASE_TOS_VECTOR_REGION` | `str` | `cn-beijing` | 区域。 |
| `security_token` | `DATABASE_TOS_VECTOR_SECURITY_TOKEN` | `str \| None` | `None` | STS 临时凭证令牌。 |
| `max_retry_count` | `DATABASE_TOS_VECTOR_MAX_RETRY_COUNT` | `int` | `3` | 最大重试次数。 |
| `max_connections` | `DATABASE_TOS_VECTOR_MAX_CONNECTIONS` | `int` | `1024` | 最大连接数。 |
| `connection_time` | `DATABASE_TOS_VECTOR_CONNECTION_TIME` | `int` | `10` | 连接超时（秒）。 |
| `socket_timeout` | `DATABASE_TOS_VECTOR_SOCKET_TIMEOUT` | `int` | `30` | Socket 超时（秒）。 |
| `enable_verify_ssl` | `DATABASE_TOS_VECTOR_ENABLE_VERIFY_SSL` | `bool` | `true` | 是否校验 SSL 证书。 |
| `dns_cache_time` | `DATABASE_TOS_VECTOR_DNS_CACHE_TIME` | `int` | `15` | DNS 缓存时间（秒）。 |

<Note>
`TOSVectorConfig` 还提供代理（`proxy_host`/`proxy_port`/`proxy_username`/`proxy_password`）、`high_latency_log_threshold`、`user_agent_*` 等高级项，通常保持默认即可。
</Note>

### embedding 配置

`embedding_config` 为 `EmbeddingModelConfig`，环境变量前缀 `MODEL_EMBEDDING_`：

| 配置项 | 环境变量 | 类型 | 默认值 | 说明 |
| :--- | :--- | :--- | :--- | :--- |
| `name` | `MODEL_EMBEDDING_NAME` | `str` | `doubao-embedding-vision-250615` | embedding 模型名。 |
| `dim` | `MODEL_EMBEDDING_DIM` | `int` | `2048` | embedding 向量维度，用于创建向量索引；距离度量为余弦相似度。 |
| `api_base` | `MODEL_EMBEDDING_API_BASE` | `str` | `https://ark.cn-beijing.volces.com/api/v3/` | embedding 服务的 API 地址。 |
| `api_key` | `MODEL_EMBEDDING_API_KEY` | `str` | 依次回退到 `MODEL_AGENT_API_KEY` 或自动获取的 Ark 令牌 | 访问 embedding 服务的密钥。 |

## 环境变量配置

```bash lines
# 火山引擎凭证与 TOS 向量桶
export VOLCENGINE_ACCESS_KEY="your-ak"
export VOLCENGINE_SECRET_KEY="your-sk"
export DATABASE_TOS_VECTOR_BUCKET="your-vector-bucket"
export DATABASE_TOS_VECTOR_ACCOUNT_ID="your-account-id"
export DATABASE_TOS_VECTOR_ENDPOINT="tosvectors-cn-beijing.volces.com"
export DATABASE_TOS_VECTOR_REGION="cn-beijing"

# embedding 模型
export MODEL_EMBEDDING_NAME="doubao-embedding-vision-250615"
export MODEL_EMBEDDING_DIM=2048
export MODEL_EMBEDDING_API_KEY="your-ark-api-key"
```

<Warning>
`add_from_directory` 与 `add_from_files` 尚在完善中，处理部分文件（如包含图片的文档）时可能存在缺失。文本注入（`add_from_text`）已可稳定使用。
</Warning>
